--- a/src/components/AboutSection.scss
+++ b/src/components/AboutSection.scss
@@ -55,6 +55,14 @@
 
   @media (max-width: 768px) {
     font-size: 24px;
+    display: flex;
+    justify-content: center;
+  }
+
+  @media (max-width: 1024px) {
+    font-size: 24px;
+    display: flex;
+    justify-content: center;
   }
 }
 
@@ -63,8 +71,8 @@
   font-weight: 600;
   font-size: 40px;
   color: #D3E87D;
-
-
+  display: flex;
+  justify-content: center;
 }
 
 .about-description {
@@ -76,5 +84,22 @@
 
   @media (max-width: 768px) {
     font-size: 14px;
+  }
+}
+
+
+h3 {
+  @media (max-width: 768px) {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+  }
+
+}
+
+p{
+  @media (max-width: 768px) {
+    display: flex;
+    justify-content: center;
   }
 }
