--- a/src/components/AboutSection.scss
+++ b/src/components/AboutSection.scss
@@ -54,13 +54,13 @@
   font-size: 30px;
 
   @media (max-width: 768px) {
-    font-size: 24px;
+    font-size: 22px;
     display: flex;
     justify-content: center;
   }
 
   @media (max-width: 1024px) {
-    font-size: 24px;
+    font-size: 22px;
     display: flex;
     justify-content: center;
   }
@@ -90,7 +90,7 @@
 
 h3 {
   @media (max-width: 768px) {
-    display: flex;
+    //display: flex;
     justify-content: center;
     margin: 0;
   }
@@ -99,7 +99,7 @@ h3 {
 
 p{
   @media (max-width: 768px) {
-    display: flex;
+    //display: flex;
     justify-content: center;
   }
 }
