Minification des composants

--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -1,91 +1,1 @@
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  background-color: #000;
-  z-index: 1000;
-
-  
-  .burger-menu {
-    display: flex;
-    font-size: 24px;
-    color: #FFFFFF;
-    cursor: pointer;
-    margin-right: auto; 
-
-    @media (min-width: 769px) {
-      display: none; 
-    }
-  }
-
-
-  .logo {
-    font-size: 24px;
-    color: #D3E87D;
-    cursor: pointer;
-    text-decoration: none;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-  }
-
-
-  .language-switch {
-    display: flex;
-    gap: 10px;
-
-    button {
-      background: none;
-      border: none;
-      color: #FFFFFF;
-      cursor: pointer;
-      font-size: 16px;
-      transition: color 0.3s ease;
-    }
-
-    button:hover {
-      color: #D3E87D;
-    }
-  }
-
-  .navigation {
-    display: flex;
-    gap: 20px;
-
-    a {
-      color: #FFFFFF;
-      text-decoration: none;
-      cursor: pointer;
-      transition: color 0.3s ease;
-    }
-
-    a:hover {
-      color: #D3E87D;
-    }
-
-    @media (max-width: 768px) {
-      display: none;
-      flex-direction: column;
-      background-color: #000;
-      position: absolute;
-      top: 70px;
-      left: 0;
-      width: 100%;
-      padding: 20px;
-      border-radius: 10px;
-
-      &.active {
-        display: flex;
-      }
-
-      a {
-        margin: 10px 0;
-        text-align: center;
-      }
-    }
-  }
-}
+.header{display:flex;justify-content:space-between;align-items:center;padding:20px;position:fixed;top:0;width:100%;background-color:#000;z-index:1000;}.header .burger-menu{display:flex;font-size:24px;color:#FFFFFF;cursor:pointer;margin-right:auto;}@media(min-width:769px){.header .burger-menu{display:none;}}.header .logo{font-size:24px;color:#D3E87D;cursor:pointer;text-decoration:none;position:absolute;left:50%;transform:translateX(-50%);}.header .language-switch{display:flex;gap:10px;}.header .language-switch button{background:none;border:none;color:#FFFFFF;cursor:pointer;font-size:16px;transition:color 0.3s ease;}.header .language-switch button:hover{color:#D3E87D;}.header .navigation{display:flex;gap:20px;}.header .navigation a{color:#FFFFFF;text-decoration:none;cursor:pointer;transition:color 0.3s ease;}.header .navigation a:hover{color:#D3E87D;}@media(max-width:768px){.header .navigation{display:none;flex-direction:column;background-color:#000;position:absolute;top:70px;left:0;width:100%;padding:20px;border-radius:10px;}.header .navigation.active{display:flex;}.header .navigation a{margin:10px 0;text-align:center;}}
